# Unitytium_core

./: Cargo.toml  README.md
.github/workflows/: quik.yml
Chain_service/: Cargo.toml
Chain_service/src/: lib.rs
bank/: Cargo.toml
bank/src/: lib.rs
block/: Cargo.toml
block/src/: lib.rs
blockModule/: Cargo.toml
blockModule/src/: lib.rs
chainmodule/: Cargo.toml
chainmodule/src/: lib.rs
core/: Cargo.toml
core/src/: main.rs
cryptho/: Cargo.toml
cryptho/src/: lib.rs  util.rs
http_service/: Cargo.toml
http_service/src/: main.rs
httpclient/: Cargo.toml  chain.json
httpclient/src/: chain.rs  main.rs
node/: Cargo.toml
node/src/: lib.rs  nodeservice.rs
nodeClient/: Cargo.toml
nodeClient/src/: main.rs
nodeserver/: Cargo.toml
nodeserver/src/: main.rs
p2p/: Cargo.toml
p2p/src/: main.rs
src/: main.rs
transactionModule/: Cargo.toml
transactionModule/src/: lib.rs
transaction_service/: Cargo.toml
transaction_service/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
