[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transaction_service = {path = "transaction_service"}
block = {path = "block"}
Chain_service = {path = "Chain_service"}
rand="0.8.4"
