[package]
name = "Chain_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transaction_service = {path = "../transaction_service"}
block = {path = "../block"}
sha2 = "0.10.0"
hex-literal = "0.3.4"