[package]
name = "blockModule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transactionModule = { path = "../transactionModule" }
cryptho = { path = "../cryptho" }
node = { path = "../node" }
bank ={path="../bank"}
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"