[package]
name = "httpclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transactionModule = { path = "../transactionModule" }
cryptho = { path = "../cryptho" }
bank ={path="../bank"}
blockModule ={path="../blockModule"}
node = {path="../node"}
rand = "0.8.4"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


