[package]
name = "nodeServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transactionModule = { path = "../transactionModule" }
cryptho = { path = "../cryptho" }
blockModule ={path="../blockModule"}
node = {path="../node"}
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
