[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transactionModule = { path = "../transactionModule" }
cryptho = { path = "../cryptho" }
bank ={path="../bank"}
blockModule ={path="../blockModule"}
node = {path="../node"}
libp2p = "0.41.0"
futures = "0.3.19"
