[package]
name = "transactionModule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptho = { path = "../cryptho" }
bank ={path="../bank"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"